# types_library

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
include/kore/: checked_ptr.hpp  factory.hpp  managed_ptr.hpp  raw_ptr.hpp
include/kore/containers/: exception.hpp  fast_bimap.hpp  fixed_array.hpp  heap.hpp  priority_queue.hpp  utility.hpp
include/kore/exception/: base.hpp
include/kore/graph/: README.md  edge.hpp  graph.hpp  reader.hpp  traits.hpp  vertex.hpp
include/kore/tests/type_traits/: list.hpp
include/kore/type_traits/: helper.hpp  list.hpp  set.hpp  utility.hpp
include/kore/type_traits/base/: null_type.hpp  undefined_type.hpp
include/kore/type_traits/internal/list/: merge_type.hpp
include/kore/utility/: string.hpp  timer.hpp  uuid.hpp
include/platform/internal/base/: void_type.hpp
include/platform/internal/list/: is_contains_type.hpp  is_empty_type.hpp  list_type.hpp  merge_type.hpp  pop_type.hpp  push_type.hpp  top_type.hpp
include/platform/internal/set/: set_type.hpp
include/platform/traits/: type_traits.hpp
include/platform/type_list/: internal.hpp  list.hpp  list_tests.hpp
src/: main.cpp
src/grapth/: reader.cpp
src/utility/: uuid.cpp
test/: CMakeLists.txt
test/src/: module.cpp
test/src/graph/: graph.cpp
tests/type_traits/: list.hpp
